2014-06-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_split_window): Always operate on active
	window.
	* info/window.c (window_make_window)
	* info/session.c (info_split_window)
	* info/echo-area.c (ea_possible_completions) [!SPLIT_BEFORE_ACTIVE]:
	Made unconditional.

2014-06-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_search_in_node_internal, info_search_internal):
	Replace calls to set_remembered_pagetop_and_point,
	window_set_node_of_window and remember_window_and_node with call to
	info_set_node_of_window.
	(set_remembered_pagetop_and_point): Merged into
	info_set_node_of_window.

2014-06-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/footnotes.c (info_get_or_remove_footnotes): Call
	info_set_node_of_window instead of window_set_node_of_window.
	* info/session.c (remember_window_and_node): Declared static.

2014-06-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/pseudotty.c: Call posix_openpt instead of getpt.

	* info/t/Init-intera.inc: Don't redirect stderr.  Set
	LIBC_FATAL_STDERR_.

	* info/t/body-start.sh, info/t/end-of-line.sh, info/t/goto-quoted.sh,
	info/t/index-long-nodeline.sh, info/t/index.sh, info/t/next-quoted.sh,
	info/t/quoted-label-and-target.sh, info/t/quoted-label-as-target.sh,
	info/t/quoted-target.sh, info/t/split-index.sh, info/t/tab.sh: Don't
	exit immediately if no output file was created and always proceed to
	cleanup.

2014-06-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (forget_node, forget_windows_and_nodes): Free
	NODE objects in window history list.
	(info_split_window): Copy the NODE object when creating a new
	window.

	* info/echo-area.c (restore_calling_window): Call forget_node to
	properly erase completions window from window history and restore
	previous node.
	(ea_possible_completions): Call info_set_node_of_window instead
	of window_set_node_of_window to save point and pagetop.
	(calling_window_point, calling_window_pagetop): Delete unused.
